# ALICE-SIMD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
bindings/ue5/: AliceSIMD.h
bindings/unity/: AliceSIMD.cs
src/: aligned.rs  bitmask.rs  branchless.rs  fast_math.rs  ffi.rs  hash.rs  lib.rs  vec3.rs
